deployment-strategies/rolling-update/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rollingupdate
  name: rollingupdate-deployment
  namespace: rollingupdate-ns
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rollingupdate
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1 #Extra pod
      maxUnavailable: 0 #Unavailable pod
  template:
    metadata:
      labels:
        app: rollingupdate
    spec:
      containers:
        - image: abhradippaul/deployment-strategies:v1
          name: rollingupdate-container
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 25m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 20Mi
