deployment-strategies/rolling-update/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rollingupdate
  name: rollingupdate-svc
  namespace: rollingupdate-ns
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: rollingupdate
