deployment-strategies/rolling-update/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollingupdate-deployment-strategies
  namespace: rollingupdate-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollingupdate-svc
                port:
                  number: 80
